--- a/exampleapp/res/layout/activity_main.xml
+++ b/exampleapp/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     <view
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        class="ch.haclyon.emojichooser.EmojiChooser"
+        class="ch.halcyon.emojichooser.EmojiChooser"
         android:id="@+id/view"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
